--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
 layout: single
 author_profile: true
 ---
-Hello!
+Hello!<br/><br/>
+
+I'm currently updating this website. <br/><br/>
+  
+     
+It began as an archive of some of my data journalism from a few years ago.
+I will be updating it with more up-to-date information soon.
