--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ---
-layout: single
-author_profile: true
+layout: home
 ---
-Hello!<br/><br/>
+<h1>Hello!</h1>
+<img style="max-width:100%; width:400px" src="assets/images/lbatt.jpg">
 
-I'm currently updating this website. <br/><br/>
-  
-     
-It began as an archive of some of my data journalism from a few years ago.
-I will be updating it with more up-to-date information soon.
+
+<br/><br/>
+
+Hold tight while I update my website! <br/><br/>
