--- a/index.html
+++ b/index.html
@@ -7,4 +7,14 @@ layout: home
 
 <br/><br/>
 
-Hold tight while I update my website! <br/><br/>
+I'm Lucas.
+<br/><br/>
+I've spent the last 7.5 years working at the intersecion of community + journalism at the Bristol Cable.
+<br/><br/>
+I have worked across almost every organisational function, from fundraising and membership, to HR and operations.
+<br/><br/>
+My work mainly focused on developing engaging members and developing membership into a sustainable business model, from developing strategies to grow membership, to facilitating participation, and delivering communications campaigns.
+<br/><br/>
+I'm open to freelance work. I'm keen to work with newsrooms who want to develop their membership programmes, deepen community engagement, and grow their revenue.
+<br/><br/>
+<b>Get in touch: lucas@lbatt.com</b>
