--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ layout: home
 
 I'm Lucas.
 <br/><br/>
-I've spent the last 7.5 years working at the intersecion of community + journalism at the Bristol Cable.
+I've spent the last 7.5 years working at the intersection of community + journalism at the Bristol Cable.
 <br/><br/>
 I have worked across almost every organisational function, from fundraising and membership, to HR and operations.
 <br/><br/>
-My work mainly focused on developing engaging members and developing membership into a sustainable business model, from developing strategies to grow membership, to facilitating participation, and delivering communications campaigns.
+My work mainly focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
 <br/><br/>
 I'm open to freelance work. I'm keen to work with newsrooms who want to develop their membership programmes, deepen community engagement, and grow their revenue.
 <br/><br/>
