width and social links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: home
 ---
+<div class="homepage">
 <h1>Hello!</h1>
 <img style="max-width:100%; width:400px" src="assets/images/lbatt.jpg">
 
@@ -18,3 +19,4 @@ My work mainly focused on engaging members and developing membership into a sust
 I'm open to freelance work. I'm keen to work with newsrooms who want to develop their membership programmes, deepen community engagement, and grow their revenue.
 <br/><br/>
 <b>Get in touch: lucas@lbatt.com</b>
+</div>
