--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: home
 
 I'm Lucas.
 <br/><br/>
-I've spent the last 7.5 years working at the intersection of community + journalism at the Bristol Cable.
+I support independent media to solve their business challenges.
 <br/><br/>
-I have worked across almost every organisational function, from fundraising and membership, to HR and operations.
+I coordinate <a href="https://referencecircle.eu/" target="_blank">Reference – the European Independent Media Circle</a>. Before that, I  spent 7.5 years working at the intersection of revenue + community + journalism at <a href="https://thebristolcable.org/about/" target="_blank">the Bristol Cable</a>.
 <br/><br/>
-My work mainly focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
+There I worked across almost every organisational function, from fundraising and membership, to HR and operations. My work mainly focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
 <br/><br/>
 I'm open to freelance work. I'm keen to work with newsrooms who want to develop their membership programmes, deepen community engagement, and grow their revenue.
 <br/><br/>
