--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@ I'm Lucas.
 <br/><br/>
 I support independent media to solve their business challenges.
 <br/><br/>
-I coordinate <a href="https://referencecircle.eu/" target="_blank">Reference – the European Independent Media Circle</a>. Before that, I  spent 7.5 years working at the intersection of revenue + community + journalism at <a href="https://thebristolcable.org/about/" target="_blank">the Bristol Cable</a>.
+I coordinate <a href="https://referencecircle.eu/" target="_blank">Reference – the European Independent Media Circle</a>. Before that, I spent 7.5 years working at the intersection of revenue + community + journalism at <a href="https://thebristolcable.org/about/" target="_blank">the Bristol Cable</a>.
 <br/><br/>
-There I worked across almost every organisational function, from fundraising and membership, to HR and operations. My work mainly focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
+There I worked across almost every organisational function, from fundraising and membership, to HR and operations. Much of my work focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
 <br/><br/>
-I'm open to freelance work. I'm keen to work with newsrooms who want to develop their membership programmes, deepen community engagement, and grow their revenue.
+I'm open to freelance work. Whether you're from a newsroom and wants to evolve your organisation, develop your membership programme, deepen community engagement, understand your audience and grow your revenue, or a non-profit seeking to support public interest journalism, I'm happy to help.
 <br/><br/>
-<b>Get in touch: lucas@lbatt.com</b>
+
+<b>Get in touch: <a href="hello@lbatt.com">hello@lbatt.com</a></b>
+
+
 </div>
