--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ There I worked across almost every organisational function, from fundraising and
 I'm open to freelance work. Whether you're from a newsroom and wants to evolve your organisation, develop your membership programme, deepen community engagement, understand your audience and grow your revenue, or a non-profit seeking to support public interest journalism, I'm happy to help.
 <br/><br/>
 
-<b>Get in touch: <a href="hello@lbatt.com">hello@lbatt.com</a></b>
+<b>Get in touch: <a href="mailto:hello@lbatt.com">hello@lbatt.com</a></b>
 
 
 </div>
