--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ I coordinate <a href="https://referencecircle.eu/" target="_blank">Reference –
 <br/><br/>
 There I worked across almost every organisational function, from fundraising and membership, to HR and operations. Much of my work focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
 <br/><br/>
-I'm open to freelance work. Whether you're from a newsroom and wants to evolve your organisation, develop your membership programme, deepen community engagement, understand your audience and grow your revenue, or a non-profit seeking to support public interest journalism, I'm happy to help.
+I'm open to freelance work. Whether you're from a newsroom looking to evolve your organisation, develop your membership programme, better understand and engage your communinity, and grow your revenue, or a non-profit seeking to support public interest journalism, I'm happy to help.
 <br/><br/>
 
 <b>Get in touch: <a href="mailto:hello@lbatt.com">hello@lbatt.com</a></b>
