--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ I'm Lucas.
 <br/><br/>
 I support independent media to solve their business challenges.
 <br/><br/>
-I coordinate <a href="https://referencecircle.eu/" target="_blank">Reference – the European Independent Media Circle</a>. Before that, I spent 7.5 years working at the intersection of revenue + community + journalism at <a href="https://thebristolcable.org/about/" target="_blank">the Bristol Cable</a>.
+I spent 7.5 years working at the intersection of revenue + community + journalism at <a href="https://thebristolcable.org/about/" target="_blank">the Bristol Cable</a>. There I worked across almost every organisational function, from fundraising and membership, to HR and operations. Much of my work focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
 <br/><br/>
-There I worked across almost every organisational function, from fundraising and membership, to HR and operations. Much of my work focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
+Since then I have supported independent media organisations to advance their missions, both as a freelance consultant and as the coordinator of <a href="https://referencecircle.eu/" target="_blank">Reference – a network of pioneering European independent media</a>.
 <br/><br/>
-I'm open to freelance work. Whether you're from a newsroom looking to evolve your organisation, develop your membership programme, better understand and engage your communinity, and grow your revenue, or a non-profit seeking to support public interest journalism, I'm happy to help.
+Whether you're from a newsroom looking to evolve your organisation, develop your membership programme, better understand and engage your communinity, and grow your revenue, or a non-profit seeking to support public interest journalism, I'm happy to help.
 <br/><br/>
 
 <b>Get in touch: <a href="mailto:hello@lbatt.com">hello@lbatt.com</a></b>
