--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@ layout: home
 ---
 <div class="homepage">
 <h1>Hello!</h1>
-<img style="max-width:100%; width:400px" src="assets/images/lbatt.jpg">
-
-
+<img style="max-width:100%; width:400px" src="assets/images/LucasBatt_Profile.jpg">
 <br/><br/>
 
 I'm Lucas.
 <br/><br/>
 I support independent media to solve their business challenges.
 <br/><br/>
-I spent 7.5 years working at the intersection of revenue + community + journalism at <a href="https://thebristolcable.org/about/" target="_blank">the Bristol Cable</a>. There I worked across almost every organisational function, from fundraising and membership, to HR and operations. Much of my work focused on engaging members and developing membership into a sustainable business model: from developing strategies to grow membership, to facilitating community participation, and delivering communications campaigns.
+I spent over seven years working at the intersection of revenue + community + journalism at <a href="https://thebristolcable.org/about/" target="_blank">the Bristol Cable</a>, a community-owned cooperative newspaper. 
 <br/><br/>
-Since then I have supported independent media organisations to advance their missions, both as a freelance consultant and as the coordinator of <a href="https://referencecircle.eu/" target="_blank">Reference – a network of pioneering European independent media</a>.
+I know what it takes to build a media organisation doing things differently. I worked across almost every organisational function, from leading on fundraising and membership, to HR and operations (with a bit of investigative data journalism thrown in), raising hundreds of thousands of pounds for the organisation.
 <br/><br/>
-Whether you're from a newsroom looking to evolve your organisation, develop your membership programme, better understand and engage your communinity, and grow your revenue, or a non-profit seeking to support public interest journalism, I'm happy to help.
+A significant focus of my work was on nurturing a relationship with the Cable's 2,800 members and developing membership into a sustainable business model: developing membership growth strategies, newsletter products, facilitating community events and online participation, and delivering communications campaigns.
+<br/><br/>
+Since then I have been working to share what I learned about running and growing an innovative independent media organisation with others doing the same, both as a freelance consultant and as the coordinator of <a href="https://referencecircle.eu/" target="_blank">Reference</a> – a network of pioneering European independent media organisations.
+<br/><br/>
+Whether you're from a newsroom looking to evolve your organisation, develop your membership programme, better understand and engage your community, and grow your revenue, or a non-profit seeking to support public interest journalism, I'm happy to help.
 <br/><br/>
 
 <b>Get in touch: <a href="mailto:hello@lbatt.com">hello@lbatt.com</a></b>
